# rtti-test

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  library1.cpp  library1.h  main.cpp  userclass.cpp  userclass.h
